assignment1/src/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Break'", "'Continue'", "'If'", "'Elseif'", 
                     "'Else'", "'Foreach'", "'Array'", "'In'", "'Int'", 
                     "'Float'", "'Boolean'", "'String'", "'Return'", "'Null'", 
                     "'Class'", "'Val'", "'Var'", "'Constructor'", "'Destructor'", 
                     "'New'", "'By'", "'Self'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'==.'", "'+.'", "'.'", 
                     "'..'", "':'", "'::'", "'('", "')'", "'['", "']'", 
                     "','", "';'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "IF", "ELSEIF", 
                      "ELSE", "FOREACH", "ARRAY", "IN", "INT", "FLOAT", 
                      "BOOLEAN", "STRING", "RETURN", "NULL", "CLASS", "VAL", 
                      "VAR", "CONSTRUCTOR", "DESTRUCTOR", "NEW", "BY", "SELF", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", 
                      "DOUBLE_EQU", "EQU", "DIF", "SMALLER", "SMA_EQ", "BIGGER", 
                      "BIG_EQ", "STR_EQ", "STR_ADD", "DOT", "DOUBLE_DOT", 
                      "COLLON", "DOUBLE_COLON", "LB", "RB", "LSB", "RSB", 
                      "COMMA", "SEMI", "LP", "RP", "ZERO", "INT_LIT", "FLOAT_LIT", 
                      "BOOL_LIT", "DOLLAR_ID", "NORMAL_ID", "COMMENT", "STR_LIT", 
                      "WS", "ERROR_TOKEN", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_declaration = 1
    RULE_list_of_members = 2
    RULE_member = 3
    RULE_attribute_declaration = 4
    RULE_attr_decl_bis = 5
    RULE_attr_decl_bis1 = 6
    RULE_possible_id = 7
    RULE_id_list_attribute = 8
    RULE_more_id_attribute = 9
    RULE_value_list = 10
    RULE_type_name = 11
    RULE_method_declaration = 12
    RULE_normal_method = 13
    RULE_constructor = 14
    RULE_destructor = 15
    RULE_list_of_parameters = 16
    RULE_more_parameters = 17
    RULE_parameters = 18
    RULE_id_list = 19
    RULE_more_id = 20
    RULE_list_of_expressions = 21
    RULE_more_expression = 22
    RULE_expression = 23
    RULE_string_expression = 24
    RULE_expr1 = 25
    RULE_relation_expression = 26
    RULE_expr2 = 27
    RULE_logical_expression = 28
    RULE_expr3 = 29
    RULE_adding_expression = 30
    RULE_expr4 = 31
    RULE_multiplying_expression = 32
    RULE_expr5 = 33
    RULE_not_expression = 34
    RULE_expr6 = 35
    RULE_negative_expression = 36
    RULE_expr7 = 37
    RULE_index_expression = 38
    RULE_expr8 = 39
    RULE_object_access_expression = 40
    RULE_expr9 = 41
    RULE_operand = 42
    RULE_all_literals = 43
    RULE_inst_ob_access = 44
    RULE_inst_mth_access = 45
    RULE_super_inst_mth_acess = 46
    RULE_static_ob_access = 47
    RULE_static_mth_access = 48
    RULE_object_creation_expression = 49
    RULE_statements = 50
    RULE_var_and_const_stmt = 51
    RULE_var_and_const_bis = 52
    RULE_var_and_const_bis1 = 53
    RULE_assign_stmt = 54
    RULE_left_hand_side = 55
    RULE_scalar_var = 56
    RULE_if_stmt = 57
    RULE_for_in_stmt = 58
    RULE_break_stmt = 59
    RULE_cont_stmt = 60
    RULE_return_stmt = 61
    RULE_method_invocation_stmt = 62
    RULE_block_stmt = 63
    RULE_array_lit = 64
    RULE_indexed_array = 65
    RULE_multi_demensional_array = 66
    RULE_list_of_arrays = 67
    RULE_more_array = 68
    RULE_array_type = 69
    RULE_all_int_lit = 70

    ruleNames =  [ "program", "class_declaration", "list_of_members", "member", 
                   "attribute_declaration", "attr_decl_bis", "attr_decl_bis1", 
                   "possible_id", "id_list_attribute", "more_id_attribute", 
                   "value_list", "type_name", "method_declaration", "normal_method", 
                   "constructor", "destructor", "list_of_parameters", "more_parameters", 
                   "parameters", "id_list", "more_id", "list_of_expressions", 
                   "more_expression", "expression", "string_expression", 
                   "expr1", "relation_expression", "expr2", "logical_expression", 
                   "expr3", "adding_expression", "expr4", "multiplying_expression", 
                   "expr5", "not_expression", "expr6", "negative_expression", 
                   "expr7", "index_expression", "expr8", "object_access_expression", 
                   "expr9", "operand", "all_literals", "inst_ob_access", 
                   "inst_mth_access", "super_inst_mth_acess", "static_ob_access", 
                   "static_mth_access", "object_creation_expression", "statements", 
                   "var_and_const_stmt", "var_and_const_bis", "var_and_const_bis1", 
                   "assign_stmt", "left_hand_side", "scalar_var", "if_stmt", 
                   "for_in_stmt", "break_stmt", "cont_stmt", "return_stmt", 
                   "method_invocation_stmt", "block_stmt", "array_lit", 
                   "indexed_array", "multi_demensional_array", "list_of_arrays", 
                   "more_array", "array_type", "all_int_lit" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    IF=3
    ELSEIF=4
    ELSE=5
    FOREACH=6
    ARRAY=7
    IN=8
    INT=9
    FLOAT=10
    BOOLEAN=11
    STRING=12
    RETURN=13
    NULL=14
    CLASS=15
    VAL=16
    VAR=17
    CONSTRUCTOR=18
    DESTRUCTOR=19
    NEW=20
    BY=21
    SELF=22
    ADD=23
    SUB=24
    MUL=25
    DIV=26
    MOD=27
    NOT=28
    AND=29
    OR=30
    DOUBLE_EQU=31
    EQU=32
    DIF=33
    SMALLER=34
    SMA_EQ=35
    BIGGER=36
    BIG_EQ=37
    STR_EQ=38
    STR_ADD=39
    DOT=40
    DOUBLE_DOT=41
    COLLON=42
    DOUBLE_COLON=43
    LB=44
    RB=45
    LSB=46
    RSB=47
    COMMA=48
    SEMI=49
    LP=50
    RP=51
    ZERO=52
    INT_LIT=53
    FLOAT_LIT=54
    BOOL_LIT=55
    DOLLAR_ID=56
    NORMAL_ID=57
    COMMENT=58
    STR_LIT=59
    WS=60
    ERROR_TOKEN=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declarationContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 142
                self.class_declaration()
                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 147
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def NORMAL_ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.NORMAL_ID)
            else:
                return self.getToken(D96Parser.NORMAL_ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def list_of_members(self):
            return self.getTypedRuleContext(D96Parser.List_of_membersContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLLON(self):
            return self.getToken(D96Parser.COLLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declaration" ):
                return visitor.visitClass_declaration(self)
            else:
                return visitor.visitChildren(self)




    def class_declaration(self):

        localctx = D96Parser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(D96Parser.CLASS)
            self.state = 150
            self.match(D96Parser.NORMAL_ID)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLLON:
                self.state = 151
                self.match(D96Parser.COLLON)
                self.state = 152
                self.match(D96Parser.NORMAL_ID)


            self.state = 155
            self.match(D96Parser.LP)
            self.state = 156
            self.list_of_members()
            self.state = 157
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_of_membersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.MemberContext)
            else:
                return self.getTypedRuleContext(D96Parser.MemberContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_list_of_members

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_of_members" ):
                return visitor.visitList_of_members(self)
            else:
                return visitor.visitChildren(self)




    def list_of_members(self):

        localctx = D96Parser.List_of_membersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_list_of_members)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.DOLLAR_ID) | (1 << D96Parser.NORMAL_ID))) != 0):
                self.state = 159
                self.member()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_declaration(self):
            return self.getTypedRuleContext(D96Parser.Attribute_declarationContext,0)


        def method_declaration(self):
            return self.getTypedRuleContext(D96Parser.Method_declarationContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_member)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.attribute_declaration()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.DOLLAR_ID, D96Parser.NORMAL_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.method_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def attr_decl_bis(self):
            return self.getTypedRuleContext(D96Parser.Attr_decl_bisContext,0)


        def attr_decl_bis1(self):
            return self.getTypedRuleContext(D96Parser.Attr_decl_bis1Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_declaration" ):
                return visitor.visitAttribute_declaration(self)
            else:
                return visitor.visitChildren(self)




    def attribute_declaration(self):

        localctx = D96Parser.Attribute_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attribute_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 170
                self.attr_decl_bis()
                pass

            elif la_ == 2:
                self.state = 171
                self.attr_decl_bis1()
                pass


            self.state = 174
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_decl_bisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def possible_id(self):
            return self.getTypedRuleContext(D96Parser.Possible_idContext,0)


        def COLLON(self):
            return self.getToken(D96Parser.COLLON, 0)

        def type_name(self):
            return self.getTypedRuleContext(D96Parser.Type_nameContext,0)


        def EQU(self):
            return self.getToken(D96Parser.EQU, 0)

        def expression(self):
            return self.getTypedRuleContext(D96Parser.ExpressionContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def attr_decl_bis(self):
            return self.getTypedRuleContext(D96Parser.Attr_decl_bisContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attr_decl_bis

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr_decl_bis" ):
                return visitor.visitAttr_decl_bis(self)
            else:
                return visitor.visitChildren(self)




    def attr_decl_bis(self):

        localctx = D96Parser.Attr_decl_bisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attr_decl_bis)
        try:
            self.state = 188
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.possible_id()
                self.state = 177
                self.match(D96Parser.COLLON)
                self.state = 178
                self.type_name()
                self.state = 179
                self.match(D96Parser.EQU)
                self.state = 180
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 182
                self.possible_id()
                self.state = 183
                self.match(D96Parser.COMMA)
                self.state = 184
                self.attr_decl_bis()
                self.state = 185
                self.match(D96Parser.COMMA)
                self.state = 186
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_decl_bis1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list_attribute(self):
            return self.getTypedRuleContext(D96Parser.Id_list_attributeContext,0)


        def COLLON(self):
            return self.getToken(D96Parser.COLLON, 0)

        def type_name(self):
            return self.getTypedRuleContext(D96Parser.Type_nameContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attr_decl_bis1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr_decl_bis1" ):
                return visitor.visitAttr_decl_bis1(self)
            else:
                return visitor.visitChildren(self)




    def attr_decl_bis1(self):

        localctx = D96Parser.Attr_decl_bis1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attr_decl_bis1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.id_list_attribute()
            self.state = 191
            self.match(D96Parser.COLLON)
            self.state = 192
            self.type_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Possible_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NORMAL_ID(self):
            return self.getToken(D96Parser.NORMAL_ID, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_possible_id

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPossible_id" ):
                return visitor.visitPossible_id(self)
            else:
                return visitor.visitChildren(self)




    def possible_id(self):

        localctx = D96Parser.Possible_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_possible_id)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            _la = self._input.LA(1)
            if not(_la==D96Parser.DOLLAR_ID or _la==D96Parser.NORMAL_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list_attributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def possible_id(self):
            return self.getTypedRuleContext(D96Parser.Possible_idContext,0)


        def more_id_attribute(self):
            return self.getTypedRuleContext(D96Parser.More_id_attributeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_id_list_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list_attribute" ):
                return visitor.visitId_list_attribute(self)
            else:
                return visitor.visitChildren(self)




    def id_list_attribute(self):

        localctx = D96Parser.Id_list_attributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_list_attribute)
        try:
            self.state = 200
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 196
                self.possible_id()
                self.state = 197
                self.more_id_attribute()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 199
                self.possible_id()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class More_id_attributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def id_list_attribute(self):
            return self.getTypedRuleContext(D96Parser.Id_list_attributeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_more_id_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMore_id_attribute" ):
                return visitor.visitMore_id_attribute(self)
            else:
                return visitor.visitChildren(self)




    def more_id_attribute(self):

        localctx = D96Parser.More_id_attributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_more_id_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(D96Parser.COMMA)
            self.state = 203
            self.id_list_attribute()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Value_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_of_expressions(self):
            return self.getTypedRuleContext(D96Parser.List_of_expressionsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_value_list
